# introduction-to-lcel

./: README.md  pyproject.toml
src/: custom_function.py  prompt_model.py  prompt_model_stroutputparser.py
